fix: fix horizontal scroll

--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -146,7 +146,7 @@ body {
 html, body {
   &::-webkit-scrollbar {
     width: 15px;
-    height: 60px;
+    //height: 60px;
     max-height: 60px;
     background-size: contain;
   }
